# literary-finder

./: .coveragerc  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_SPACES.md  TECHNICAL_README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  test_gradio.py
docs/: API.md  SETUP.md
literary_finder/: __init__.py  app.py  config.py
literary_finder/agents/: __init__.py  base.py  book_recommender.py  contextual_historian.py  legacy_connector.py  literary_cartographer.py
literary_finder/api/: __init__.py  server.py
literary_finder/evaluation/: __init__.py  metrics.py  performance_evaluator.py  real_metrics.py
literary_finder/interface/: __init__.py  gradio_app_v3.py
literary_finder/models/: __init__.py  state.py
literary_finder/orchestration/: __init__.py  graph.py
literary_finder/tests/: __init__.py
literary_finder/tests/integration/: test_api_interface.py  test_models_integration.py
literary_finder/tests/unit/: test_agent_internal_methods.py  test_api.py  test_base_agent.py  test_book_recommender.py  test_contextual_historian.py  test_evaluation_metrics.py  test_graph.py  test_legacy_connector.py  test_literary_cartographer.py  test_models.py
literary_finder/tools/: __init__.py  google_books.py  openai_search.py
literary_finder/utils/: retry.py  safety_guardrails.py
